--- a/app/src/main/res/layout/activity_browse_jobs.xml
+++ b/app/src/main/res/layout/activity_browse_jobs.xml
@@ -4,20 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="?attr/colorOnPrimary">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
     <LinearLayout android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp">
         <TextView
-            android:layout_width="0dip"
-            android:layout_weight="3"
-            android:layout_height="50dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="10dp"
             android:autoSizeTextType="uniform"
-            android:layout_margin="20dp"
             android:text="@string/ponudbaDel"/>
         <ImageView
             android:layout_height="wrap_content"
@@ -33,11 +31,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true" />
-
     <ListView
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:clipToPadding="false"
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginHorizontal="20dp"
         android:divider="@null"
         android:dividerHeight="20dp"
@@ -45,12 +46,10 @@
         android:scrollbarSize="0dp"
         >
     </ListView>
-    </LinearLayout>
     <!-- <Button android:text="ADD" android:id="@+id/addItem" android:layout_height="wrap_content" android:layout_width="wrap_content"/>-->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
         app:menu="@menu/bottom_nav_menu"/>
-
 </LinearLayout>
