--- a/app/src/main/res/layout/saved_job_line.xml
+++ b/app/src/main/res/layout/saved_job_line.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,5 +22,5 @@
         android:layout_marginRight="20dp"
         android:layout_gravity="center_vertical"
         android:src="@drawable/baseline_star_24"
-        android:tint="?attr/colorOnSecondary"/>
+        app:tint="?attr/colorOnSecondary" />
 </LinearLayout>
