--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:indeterminate="true"
-                android:indeterminateTint="?attr/colorPrimaryVariant"/>
+                android:indeterminateTint="?attr/colorPrimaryVariant"
+                android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
         <LinearLayout
