--- a/app/src/main/res/layout/activity_browse_jobs.xml
+++ b/app/src/main/res/layout/activity_browse_jobs.xml
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginHorizontal="20dp"
+        android:paddingHorizontal="20dp"
         android:divider="@null"
         android:dividerHeight="20dp"
         android:listSelector="@android:color/transparent"
