--- a/app/src/main/res/layout/job_offer.xml
+++ b/app/src/main/res/layout/job_offer.xml
@@ -36,13 +36,13 @@
             android:id="@+id/freeSpace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"/>
+            android:layout_weight="1"/>
         <TextView
             android:id="@+id/duration"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
     </LinearLayout>
-
     <LinearLayout
         android:orientation="horizontal"
         android:layout_height="wrap_content"
@@ -51,11 +51,12 @@
             android:id="@+id/worktime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"/>
+            android:layout_weight="1"/>
         <TextView
             android:id="@+id/start"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
     </LinearLayout>
 
     <LinearLayout
@@ -67,7 +68,7 @@
             android:layout_height="match_parent"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginRight="10dp"
             android:drawableBottom="@drawable/baseline_star_outline_24"
             android:drawableTint="#ffffff"
             android:focusable="false"
@@ -78,7 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="3"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginLeft="10dp"
             android:focusable="false"
             />
     </LinearLayout>
