--- a/app/src/main/res/layout/filter_form.xml
+++ b/app/src/main/res/layout/filter_form.xml
@@ -58,7 +58,7 @@
 
     </LinearLayout>
     <CheckBox
-        android:id="@+id/checkbox_meat"
+        android:id="@+id/hideApplied"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Skrij dela, na katera si prijavljen_a"
