--- a/app/src/main/res/layout/activity_browse_jobs.xml
+++ b/app/src/main/res/layout/activity_browse_jobs.xml
@@ -34,6 +34,11 @@
         android:orientation="vertical"
         android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="20dp"/>
+    <LinearLayout
+        android:id="@+id/provideFeedback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"/>
     <TextView
         android:id="@+id/filterResponse"
         android:layout_height="wrap_content"
