--- a/app/src/main/res/layout/event_detail.xml
+++ b/app/src/main/res/layout/event_detail.xml
@@ -98,4 +98,4 @@
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
         app:menu="@menu/bottom_nav_menu"/>
-</LinearLayout>dget.ConstraintLayout>
+</LinearLayout>
