--- a/app/src/main/res/layout/event_info.xml
+++ b/app/src/main/res/layout/event_info.xml
@@ -25,11 +25,12 @@
         android:orientation="horizontal"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
+
         <TextView
             android:id="@+id/eventLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_width="190dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
         <TextView
             android:id="@+id/eventDate"
             android:layout_width="wrap_content"
