--- a/app/src/main/res/layout/activity_browse_events.xml
+++ b/app/src/main/res/layout/activity_browse_events.xml
@@ -20,6 +20,21 @@
                 android:layout_margin="20dp"
                 android:text="@string/events" />
         </LinearLayout>
+        <ListView
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:clipToPadding="false"
+            android:id="@+id/eventList"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingHorizontal="20dp"
+            android:divider="@null"
+            android:dividerHeight="20dp"
+            android:listSelector="@android:color/transparent"
+            android:scrollbarSize="0dp"
+            >
+        </ListView>
     </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
