--- a/app/src/main/res/layout/activity_browse_events.xml
+++ b/app/src/main/res/layout/activity_browse_events.xml
@@ -20,7 +20,7 @@
                 android:layout_margin="20dp"
                 android:text="@string/events" />
         </LinearLayout>
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:clipToPadding="false"
@@ -34,7 +34,7 @@
             android:listSelector="@android:color/transparent"
             android:scrollbarSize="0dp"
             >
-        </ListView>
+        </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
