--- a/app/src/main/res/layout/event_info.xml
+++ b/app/src/main/res/layout/event_info.xml
@@ -6,7 +6,8 @@
     android:orientation="vertical"
     android:background="@drawable/card_background"
     android:paddingHorizontal="20dp"
-    android:paddingVertical="10dp">
+    android:paddingVertical="10dp"
+    android:layout_marginBottom="15dp">
     <TextView
         android:id="@+id/eventID"
         android:layout_height="0dp"
@@ -42,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
         <TextView
-            android:id="@+id/eventSpots"
+            android:id="@+id/eventHost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
