--- a/app/src/main/res/layout/event_info.xml
+++ b/app/src/main/res/layout/event_info.xml
@@ -46,21 +46,7 @@
             android:id="@+id/eventHost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-        <Button
-            android:id="@+id/showMore"
-            android:text="@string/pokaziVec"
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="3"
-            android:layout_marginLeft="10dp"
-            android:focusable="false"
-            />
+            android:layout_weight="1"
+            android:paddingVertical="5dp"/>
     </LinearLayout>
 </LinearLayout>
