--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,9 +111,25 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/seznamDogodkov"
-                android:orientation="vertical"/>
+                android:orientation="vertical"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/appliedEventList"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:clipToPadding="false"
+                android:divider="@null"
+                android:dividerHeight="20dp"
+                android:listSelector="@android:color/transparent"
+                android:paddingHorizontal="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:scrollbarSize="0dp" />
 
             <ProgressBar
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:indeterminate="true"
